--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,18 @@ body {
     position: fixed;
 }
 
+h1, h2, h3 {
+    color: #0094ff;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif
+}
+
+table, th, td
+{
+    border: 1px solid #ff0000;
+    border-collapse: collapse;
+}
+
 /* Header */
 /*
 #header 
@@ -93,13 +105,6 @@ body {
 {
     color: #b200ff;
     background-color: #808080;
-}
-
-h1, h2, h3
-{
-    color: #0094ff;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif
 }
 
 /* Style the header */
