Some stuff added still.

--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,13 @@ canvas
     border:#666 1px solid;
 }
 
+#div1 {
+    width: 350px;
+    height: 70px;
+    padding: 10px;
+    border: 1px solid #aaaaaa;
+}
+
 /* Header */
 /*
 #header 
